force-app/main/default/objects/copadoconnect__Additional_Parameter__c/copadoconnect__Additional_Parameter__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting will make connection b/w integration configuration and additional parameter for e.g. Jira Board</description>
    <label>Additional Parameter</label>
</CustomObject>