force-app/main/default/objects/copadoconnect__Additional_Parameter__c/fields/copadoconnect__Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Additional_Info__c</fullName>
    <description>Can be used to store additional information, such as the Board Name.</description>
    <label>Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>