force-app/main/default/objects/copadoconnect__Additional_Parameter__c/fields/copadoconnect__Copado_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Copado_Integration_ID__c</fullName>
    <label>Copado Integration ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>