force-app/main/default/objects/copadoconnect__Additional_Parameter__c/fields/copadoconnect__Key__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>