force-app/main/default/objects/copadoconnect__Additional_Parameter__c/fields/copadoconnect__Value__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>